<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E3E3">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="134dp"
        android:layout_height="121dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/imagen_principal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="307dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_title"
        android:textColor="#4A90E2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/btnMain_CreateGoal"
        android:layout_width="177dp"
        android:layout_height="53dp"
        android:background="#2C71BD"
        android:backgroundTint="@null"
        android:text="@string/btn_create_goal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.336" />

    <Button
        android:id="@+id/btnMain_ViewGoals"
        android:layout_width="177dp"
        android:layout_height="53dp"
        android:background="#2C71BD"
        android:backgroundTint="@null"
        android:text="@string/btn_view_goals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnMain_CreateGoal"
        app:layout_constraintVertical_bias="0.413" />
</androidx.constraintlayout.widget.ConstraintLayout>